--- a/src/app/components/pokemon/pokemon.component.html
+++ b/src/app/components/pokemon/pokemon.component.html
@@ -1,21 +1,18 @@
 <!-- esto es una plantilla -->
-<ul class="pokemons">
-
-  <!-- el let <la variable que tiene a la lista > of <cuenta de los elementos en ella>-->
-  <li *ngFor='let pokemon of pokemon' [class.salected]="pokemons === selectedPokemon"  (click)="onSelect(pokemon)"> 
-    <span class="badge">{{pokemon.id}}</span> {{pokemon.name}}
-  </li>
-
-</ul>
-
-<ng-container *ngIf="selectedPokemon"> 
-  <!-- hacer un card para el pokemon selecionado -->
-  <div class="Pokeselect">
-    <h2>{{ selectedPokemon.name | uppercase }}</h2>
-    <div><span>id:</span>{{selectedPokemon.id}}</div>
-    <div>
-      <label for="pokemon-name">pokemon name:</label>
-      <input id="pokemon name" [(ngModel)]="selectedPokemon.name"  placeholder="Name">
-    </div>
+<div class="LC-container">
+  <div class="card-container"> 
+     <h1 style="color: black;"> {{listTitle}} </h1>
+    <ul class="pokemons">
+      <!-- el let <la variable que tiene a la lista > of <cuenta de los elementos en ella> -->
+        <li *ngFor='let pokemon of pokemon' [class.selected]="pokemons === selectedPokemon"  (click)="onSelect(pokemon)"> 
+          <span class="badge">{{pokemon.id}}</span> {{pokemon.name}}
+        </li>
+        
+    </ul>
+  </div> 
+    
+  <div class="card-container1">
+    <app-pokemon-detail [pokemon]="selectedPokemon"></app-pokemon-detail>
   </div>
-</ng-container>
+  
+</div>
