--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>{{title}}</h1>
-<app-pokemon></app-pokemon>
+<div class="page-container">
+    <div class="img-back">
+        <img src="../assets/fondo1.jpg"   alt="fondo">
+    </div>
+    <div class="con-title">
+        <h1 >{{title}}</h1>
+    </div>
+    <app-pokemon></app-pokemon>
+</div>
 
