--- a/src/app/components/pokemon/pokemon.component.css
+++ b/src/app/components/pokemon/pokemon.component.css
@@ -1,7 +1,7 @@
 /* pokemonsComponent's private CSS styles 
     Container styles
 */
-.LC-container {
+/* .LC-container {
     display: flex;
     justify-content: center;   
     flex-direction: row;
@@ -19,27 +19,15 @@
     background-color: rgba(255,255,255,.15);
     backdrop-filter: blur(5px);
 }
-.card-container1{
-    background-color: white;
-    width: 60vh;
-    height: 90vh;
-    margin: auto;
-    border-radius: 5px;
-    box-shadow: 0 0 1rem rgba(0,0,0,.2);
-    border-radius: 5px;
-    background-color: rgba(255,255,255,.15);
-    backdrop-filter: blur(5px);
-}
-
 .card-container h1{
     text-align: center;
     text-transform: uppercase;
     color: #ffff;
     padding-top: 10px;
-} 
+}  */
 
 /* card styles */
-.card-container .pokemons {
+/* .card-container .pokemons {
     margin: auto;
     list-style-type: none;
     padding: 0 10px 0 10px;
@@ -62,23 +50,11 @@
 
 .card-container .pokemons li:hover {
     background-color:#D45FC5;
-    
     left: .1em;
 }
-.card-container .pokemons li.selected {
-    background-color:#D45FC5;
-    color: white;
-}
 
-.card-container .pokemons li.selected:hover {
-    background-color: #C876EB;
-    color: white;
-    
-}
-
-.card-container .pokemons li.selected:active {
-    background-color: rgb(245, 240, 240);
-    color: white;
+a{
+    text-decoration: none;
 }
 
 .card-container .pokemons .badge {
@@ -94,12 +70,10 @@
     height: 1.8em;
     margin-right: .8em;
     border-radius: 2px;
-}
+} */
 
 
-input {
-    padding: .5rem;
-}
+
 
 
 
