get data from a server/api

--- a/src/app/components/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/components/pokemon-detail/pokemon-detail.component.html
@@ -1,13 +1,15 @@
 <!-- <div class="card-container"> -->
   <ng-container *ngIf="pokemon">
     <!-- hacer un card para el pokemon selecionado -->
-    <!-- <div class="card-detail"> -->
+    <div class="card-detail">
       <h2>{{ pokemon.name | uppercase }}</h2>
-      <div><span>id:</span>{{ pokemon.id }}</div>
+      <div><span>id:</span>{{pokemon.id }}</div>
       <div>
-        <label for="pokemon-name">pokemon name:</label>
-        <input id="pokemon name" [(ngModel)]="pokemon.name" placeholder="Poke Name" />
+        <img src="{{pokemon.image}}" alt="">
+        <label for="pokemon-name">Name:</label>{{pokemon.name}}
+        
       </div>
-    <!-- </div> -->
+      <!-- <button (click)="save()">save</button> -->
+    </div>
   </ng-container>
 <!-- </div> -->
