--- a/src/app/components/pokemon/pokemon.component.html
+++ b/src/app/components/pokemon/pokemon.component.html
@@ -1,6 +1,6 @@
 <!-- esto es una plantilla -->
-<!-- <div class="LC-container">
-  <div class="card-container">  -->
+<div class="LC-container">
+  <div class="card-container"> 
      <h1> {{listTitle}} </h1>
     <ul class="pokemons">
       <!-- el let <la variable que tiene a la lista > of <cuenta de los elementos en ella> -->
@@ -12,10 +12,5 @@
         </li>
         
     </ul>
-  <!-- </div> 
-    
-  <div class="card-container1">
-    
-  </div>
-  
-</div> -->
+  </div>   
+</div>
