--- a/src/app/components/pokemon/pokemon.component.css
+++ b/src/app/components/pokemon/pokemon.component.css
@@ -1,7 +1,7 @@
 /* pokemonsComponent's private CSS styles 
     Container styles
 */
-/* .LC-container {
+.LC-container {
     display: flex;
     justify-content: center;   
     flex-direction: row;
@@ -11,28 +11,29 @@
 .card-container{
     background-color: white;
     width: 50vh;
-    height: 90vh;
-    margin: auto;
+    margin-top: 20px;
+    margin-left: -550px;
     border-radius: 5px;
     box-shadow: 0 0 1rem rgba(0,0,0,.2);
     border-radius: 5px;
     background-color: rgba(255,255,255,.15);
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(6px);
+    color: #ffff;
 }
 .card-container h1{
     text-align: center;
     text-transform: uppercase;
-    color: #ffff;
+    
     padding-top: 10px;
-}  */
+} 
 
 /* card styles */
-/* .card-container .pokemons {
+.card-container .pokemons {
     margin: auto;
     list-style-type: none;
-    padding: 0 10px 0 10px;
+    padding: 0 10px 20px 10px;
     width: 15em;
-   
+    
 }
 
 .card-container .pokemons li{
@@ -45,7 +46,7 @@
     height: 1.6em;
     border-radius: 4px;  
     text-transform: capitalize;  
-    color: white;
+    font-weight: bold;
 }  
 
 .card-container .pokemons li:hover {
@@ -55,6 +56,7 @@
 
 a{
     text-decoration: none;
+    color: #ffff;
 }
 
 .card-container .pokemons .badge {
@@ -70,7 +72,7 @@ a{
     height: 1.8em;
     margin-right: .8em;
     border-radius: 2px;
-} */
+}
 
 
 
